--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
     <!-- CSS HS -->
     <link rel="stylesheet" href="https://preline.co/assets/css/main.css?v=3.1.0">
+    <style>
+      .rounded-full{
+        border-radius: 10px !important;
+      }
+    </style>
 
 </head>
 
